--- a/readme.html
+++ b/readme.html
@@ -24,6 +24,7 @@
                 </ul>
                 <p>После того, как все файлы будут загружены можно начинать пользоваться системой и добавлять вопросы, категории и ответы</p>
                 <p>По умолчанию создан единственный администратор с логином admin и паролем admin</p>
+                <p>Описание возможностей системы можно найти <a href="https://docs.google.com/document/d/1RIJlA-LCXA6OMi3Tc_i9IX8fEuki51Gmu-4qxVRdQNY/edit?usp=sharing">тут</a></p>
             </div>
         </div>
     </div>
